@@ -27,6 +27,7 @@ ver 0.20 (not yet released)
   - mpcdec: read the bit rate
   - pcm: support audio/L16 (RFC 2586) and audio/x-mpd-float
   - sidplay: faster scanning
+  - wavpack: large file support
   - wavpack: support DSD (WavPack 5)
   - wavpack: archive support
 * playlist
